# att

./: .#supported_manager.c  .gitignore  CMakeLists.txt  Makefile  Readme.md  action.c  action.h  apt.c  brew.c  commands.c  flatpak.c  flatpak.h  guix.c  io.c  io.h  main.c  main.h  managers.c  options.h  package_manager.h  requested_action.c  requested_action.h  run.c  run.h  snap.c  supported_manager.c  supported_manager.h  tests.c
include/: action.h  commands.h  package_manager.h  run.h  supported_manager.h  supported_managers.h  system.h
include/managers/: apt.h  brew.h  flatpak.h  guix.h  snap.h
src/: action.c  apt.c  apt.h  brew.c  commands.c  commands.h  flatpak.c  guix.c  io.c  io.h  main.c  managers.c  managers.h  package_manager.c  requested_action.c  run.c  snap.c  supported_manager.c  supported_managers.c  system.c
src/managers/: apt.c  brew.c  flatpak.c  guix.c  snap.c
test/: action_tests.c  apt_tests.c  brew_tests.c  commands_tests.c  flatpak_tests.c  guix_tests.c  io_tests.c  managers_tests.c  package_manager_tests.c  snap_tests.c  system_tests.c  tests.c
test/managers/: apt_tests.c  brew_tests.c  flatpak_tests.c  guix_tests.c  snap_tests.c
